syntax = "proto3";
package schedule.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "schedule/v1/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/BurntFinance/burnt/x/schedule/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/BurntFinance/burnt/schedule/params";
  }
  rpc ScheduledCalls(QueryScheduledCallsRequest) returns (QueryScheduledCallsResponse) {
    option (google.api.http).get = "/BurntFinance/burnt/schedule/scheduled_calls";
  }
  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3

message QueryScheduledCallsRequest{}

message QueryScheduledCall {
  string contract = 1;
  string function_name = 2;
  bytes payer = 3;
  uint64 height = 4;
  bytes signer = 5;
}

message QueryScheduledCallsResponse{
  repeated QueryScheduledCall calls = 1;
}